--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
                     <a class="nav-link active" aria-current="page" href="./pages/impresion.html">Impresion 3D</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Impresoras</a>
+                    <a class="nav-link" href="./pages/impresoras.html">Impresoras</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="./pages/productos.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Productos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Funkos</a></li>
-                      <li><a class="dropdown-item" href="#">Figuras</a></li>
-                      <li><a class="dropdown-item" href="#">Mates</a></li>
+                      <li><a class="dropdown-item" href="./pages/funkos.html">Funkos</a></li>
+                      <li><a class="dropdown-item" href="./pages/figuras.html">Figuras</a></li>
+                      <li><a class="dropdown-item" href="./pages/mates.html">Mates</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
