agregamos link wp y email

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           </div>
           <section id="section-contacto">
             <div class="boton-contacto">
-                <a href=""><button type="button" class="btn btn-secondary">Presupuesto</button></a>
-                <a href=""><button type="button" class="btn btn-secondary">Whatsapp</button></a>
+                <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"><button type="button" class="btn btn-secondary">Presupuesto</button></a>
+                <a href="https://web.whatsapp.com/"><button type="button" class="btn btn-secondary">Whatsapp</button></a>
             </div>
             <div class="fotos-home">
                 <div class="foto"> <!-- Foto 1 -->
@@ -104,7 +104,7 @@
     <section id="publicidad">
       <div class="contenido-publicidad">
     <h2>¿Tenés una idea? Contactanos</h2>
-    <a href=""><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+    <a href="https://web.whatsapp.com/"><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
       </div>
     </section>
     <footer id="footer">
