--- a/index.html
+++ b/index.html
@@ -56,29 +56,29 @@
           </div>
           <section id="section-contacto">
             <div class="boton-contacto">
-                <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"><button type="button" class="btn btn-secondary">Presupuesto</button></a>
-                <a href="https://web.whatsapp.com/"><button type="button" class="btn btn-secondary">Whatsapp</button></a>
+                <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><button type="button" class="btn btn-secondary">Presupuesto</button></a>
+                <a href="https://web.whatsapp.com/"target=”_blank”><button type="button" class="btn btn-secondary">Whatsapp</button></a>
             </div>
             <div class="fotos-home">
-                <div class="foto"> <!-- Foto 1 -->
-                  <img src="./imagines/Home/1.jpg" alt="Imagen 1">
-                </div>
-                <div class="foto"> <!-- Foto 2 -->
-                  <img src="./imagines/Home/2.jpg" alt="Imagen 2">
-                </div>
-                <div class="foto"> <!-- Foto 3 -->
-                  <img src="./imagines/Home/3.jpg" alt="Imagen 3">
-                </div>
-                <div class="foto"> <!-- Foto 4 -->
-                  <img src="./imagines/Home/4.jpg" alt="Imagen 4">
-                </div>
-                <div class="foto"> <!-- Foto 5 -->
-                  <img src="./imagines/Home/5.jpg" alt="Imagen 5">
-                </div>
-                <div class="foto"> <!-- Foto 6 -->
-                  <img src="./imagines/Home/6.jpg" alt="Imagen 6">
-                </div>
+              <div class="foto"> <!-- Foto 1 -->
+                <img src="./imagines/Home/1.jpg" alt="Imagen 1">
               </div>
+              <div class="foto"> <!-- Foto 2 -->
+                <img src="./imagines/Home/2.jpg" alt="Imagen 2">
+              </div>
+              <div class="foto"> <!-- Foto 3 -->
+                <img src="./imagines/Home/3.jpg" alt="Imagen 3">
+              </div>
+              <div class="foto"> <!-- Foto 4 -->
+                <img src="./imagines/Home/4.jpg" alt="Imagen 4">
+              </div>
+              <div class="foto"> <!-- Foto 5 -->
+                <img src="./imagines/Home/5.jpg" alt="Imagen 5">
+              </div>
+              <div class="foto"> <!-- Foto 6 -->
+                <img src="./imagines/Home/6.jpg" alt="Imagen 6">
+              </div>
+            </div>
           </section>
     </main>
     </section>
@@ -104,15 +104,15 @@
     <section id="publicidad">
       <div class="contenido-publicidad">
     <h2>¿Tenés una idea? Contactanos</h2>
-    <a href="https://web.whatsapp.com/"><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+    <a href="https://web.whatsapp.com/"target=”_blank”><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
       </div>
     </section>
     <footer id="footer">
       <p>PITER 3D</p>
       <p>&copy;2023</p>
       <div>
-          <a href="https://www.instagram.com/"><img src="./imagines/instagram.png" alt=""></a>
-          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"><img src="./imagines/correo-electronico.png" alt=""></a>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="./imagines/instagram.png" alt=""></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="./imagines/correo-electronico.png" alt=""></a>
       </div>
   </footer>
     
