--- a/pages/impresoras.html
+++ b/pages/impresoras.html
@@ -46,6 +46,23 @@
             </div>
           </nav>
     </header>
-    
+    <section class="principal-impresora">
+      <div class="container-md">
+        <div class="card mb-3" style="max-width: 700px; margin: auto;">
+            <div class="row g-0">
+              <div class="col-md-4 foto-impresora">
+                <img src="../imagines/impresora/laser-3327112_1280.jpg" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Impresoras 3D</h5>
+                  <p class="card-text">Las impresoras de impresión 3D han transformado radicalmente la fabricación y el diseño, permitiendo la creación de objetos tridimensionales a partir de modelos digitales. Estas innovadoras máquinas utilizan una variedad de materiales, desde plásticos hasta metales y resinas, para construir capas sucesivas y dar vida a ideas tangibles.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+  </section>
+ 
 </body>
 </html>
