--- a/pages/funkos.html
+++ b/pages/funkos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Piter 3D|Funkos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -46,6 +46,104 @@
             </div>
           </nav>
     </header>
-    
+    <main class="titular-funko">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title text-center">DESCUBRE EL MUNDO DE LOS FUNKO POP</h5>
+        </div>
+        <img src="../imagines/funko/0.jpg" class="card-img-bottom" alt="...">
+      </div>
+      <div class="card funk">
+        <div class="card-body funko-tex">
+          Sumérgete en el fascinante universo de los Funko Pop!, figuras coleccionables que capturan la esencia de tus personajes favoritos con un toque único. Estas icónicas figuras, reconocidas por sus cabezas grandes y expresivas, han conquistado los corazones de coleccionistas y amantes de la cultura pop en todo el mundo. Con su diseño distintivo y estilizado, los Funko Pop! ofrecen una representación única de personajes provenientes de películas, programas de televisión, videojuegos, cómics y mucho más. Desde superhéroes legendarios hasta personajes de tus programas preferidos, la variedad de opciones es asombrosa. Lo que hace que los Funko Pop! sean aún más especiales es su capacidad para capturar la esencia de cada personaje mientras mantienen un encanto propio. Las cabezas grandes y los ojos expresivos añaden un toque juguetón a estas figuras, convirtiéndolas en piezas de colección que destacan en cualquier estantería.  Además, la comunidad de coleccionistas de Funko Pop! es vibrante y apasionada. Ediciones limitadas, exclusivas de convenciones y variantes temáticas hacen que la caza de Funko Pop! sea emocionante y desafiante, atrayendo a entusiastas de todas partes. Ya sea que estés buscando tu personaje favorito o explorando nuevas adiciones a tu colección, los Funko Pop! son una forma divertida y accesible de expresar tu amor por la cultura pop. ¡Explora el universo Funko Pop! y encuentra la figura perfecta para ti!
+        </div>
+      </div>
+    </main>
+    <section>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/5.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/6.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/ee.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/funko/7.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="publicidad">
+      <div class="contenido-publicidad">
+    <h2>¿Tenés una idea? Contactanos</h2>
+    <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+      </div>
+    </section>
+    <footer id="footer">
+      <p>PITER 3D</p>
+      <p>&copy;2023</p>
+      <div>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="./imagines/instagram.png" alt=""></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="./imagines/correo-electronico.png" alt=""></a>
+      </div>
+  </footer>
 </body>
 </html>
