--- a/pages/impresoras.html
+++ b/pages/impresoras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Piter 3D|Impresoras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -63,6 +63,76 @@
           </div>
     </div>
   </section>
+  <section class="Impresora-filamento">
+    <div class="card impre-filamento">
+      <h2>Impresora 3D de filamento:</h2>
+      <div class="card-body impreso-filamento">
+        La impresora 3D de filamento se destaca como una herramienta versátil en el mundo de la fabricación aditiva. Este dispositivo utiliza un filamento termoplástico, como PLA o ABS, que se funde y deposita capa por capa para construir objetos tridimensionales. Su proceso de impresión por deposición fundida (FDM) ofrece una asequibilidad y accesibilidad notables, convirtiéndola en una opción popular para entusiastas, diseñadores y pequeñas empresas.La simplicidad de uso de estas impresoras las hace ideales para aquellos que están dando sus primeros pasos en el mundo de la impresión 3D. Además, su capacidad para producir prototipos rápidos, piezas de repuesto y una variedad de objetos funcionales hace que sean una elección versátil en el ámbito doméstico y profesional. La disponibilidad de diversos tipos de filamentos permite una amplia gama de aplicaciones, desde la creación de modelos educativos hasta la fabricación de piezas personalizadas.
+      </div>
+    </div>
+    <div id="carouselExampleFade1" class="carousel slide carousel-fade">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../imagines/impresora/impresora filamento1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../imagines/impresora/impresorafilamento2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <div class="ratio ratio-16x9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xmQxWsa8zc4?si=Js4wtruWpLHYkfNG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade1" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade1" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+  <section class="Impresora-resina">
+    <div class="card impre-resina">
+      <h2>Impresora 3D de resina:</h2>
+      <div class="card-body impreso-resina">
+        Las impresoras 3D de resina han revolucionado la impresión tridimensional al ofrecer una calidad de detalle excepcional. Estas impresoras utilizan tecnologías como estereolitografía (SLA) para solidificar capas de resina líquida mediante la exposición a la luz ultravioleta. Aunque suelen ser más costosas que las impresoras de filamento, la calidad de los resultados justifica la inversión. La impresión con resina es especialmente adecuada para aplicaciones que requieren una precisión extrema y una superficie suave, como la joyería, la odontología y el prototipado avanzado. La capacidad de estas impresoras para capturar detalles finos y crear objetos con una calidad visual impresionante las convierte en la elección preferida para proyectos que demandan un acabado excepcional. Aunque el proceso puede ser más delicado y requiere cuidado con la manipulación de la resina, los resultados finales hacen que estas impresoras sean una opción invaluable para aquellos que buscan la máxima calidad en sus creaciones tridimensionales.
+      </div>
+    </div>
+    <div id="carouselExampleFade2" class="carousel slide carousel-fade">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../imagines/impresora/impresora resina1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="../imagines/impresora/impresoraresina2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <div class="ratio ratio-16x9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/e6I7Dr2Ll-U?si=HYLbxpEB8zGfF_UC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+  <footer id="footer">
+    <p>PITER 3D</p>
+    <p>&copy;2023</p>
+    <div>
+        <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
+        <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+    </div>
+</footer>
  
 </body>
 </html>
