terminamos page y arreglamos info

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="card mb-3">
             <img src="./imagines/3d-printer-3311587_1280.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h1 class="card-title">Lo que pienses, lo creamos.</h1>
+              <h1 class="card-title">DE TU IMAGINACIÓN A LA REALIDAD</h1>
               <p class="card-text">Piter 3D</p>
             </div>
           </div>
@@ -103,7 +103,7 @@
   </div>
     <section id="publicidad">
       <div class="contenido-publicidad">
-    <h2>¿Tenés una idea? Contactanos</h2>
+    <h2>Tu Creatividad, nuestro compromiso. ¡Contactanos!</h2>
     <a href="https://web.whatsapp.com/"target=”_blank”><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
       </div>
     </section>
