--- a/pages/funkos.html
+++ b/pages/funkos.html
@@ -46,10 +46,12 @@
             </div>
           </nav>
     </header>
+    
+  
     <main class="titular-funko">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title text-center">DESCUBRE EL MUNDO DE LOS FUNKO POP</h5>
+          <h5 class="card-title text-center">Cabezas que giran, colecciones que brillan: Descubre nuestro mundo Funko 3D</h5>
         </div>
         <img src="../imagines/funko/0.jpg" class="card-img-bottom" alt="...">
       </div>
@@ -59,7 +61,7 @@
         </div>
       </div>
     </main>
-    <section>
+    <section class="F-1">
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
@@ -95,7 +97,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="F-2">
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
@@ -133,7 +135,7 @@
     </section>
     <section id="publicidad">
       <div class="contenido-publicidad">
-    <h2>¿Tenés una idea? Contactanos</h2>
+    <h2>Modelando sueños, creando realidades: ¡Tu Mundo en 3D!</h2>
     <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
       </div>
     </section>
@@ -141,8 +143,8 @@
       <p>PITER 3D</p>
       <p>&copy;2023</p>
       <div>
-          <a href="https://www.instagram.com/"target=”_blank”><img src="./imagines/instagram.png" alt=""></a>
-          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="./imagines/correo-electronico.png" alt=""></a>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
       </div>
   </footer>
 </body>
