--- a/pages/mates.html
+++ b/pages/mates.html
@@ -46,6 +46,104 @@
             </div>
           </nav>
     </header>
+    <main class="titular-mates">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title text-center">Calidez en cada sorbo: Explora nuestra galería de Mates tridimensionales</h5>
+        </div>
+        <img src="../imagines/mates/0.png" class="card-img-bottom" alt="...">
+      </div>
+      <div class="card mate">
+        <div class="card-body mate-tex">
+          Bienvenido al fascinante mundo de los mates 3D, donde la tradición del mate, esa infusión tan arraigada en la cultura sudamericana, se encuentra con la innovación de la impresión tridimensional. En este espacio único, la artesanía tradicional se fusiona con la tecnología de vanguardia para ofrecerte una experiencia completamente nueva. Imagina tener la posibilidad de personalizar tu propio mate con formas y detalles únicos. Con la impresión 3D, cada detalle, desde el diseño del recipiente hasta los patrones en la bombilla, se puede adaptar a tu estilo personal. ¿Te gustaría un mate con formas geométricas modernas o uno que rinde homenaje a las raíces culturales con detalles tradicionales? La impresión 3D te brinda la libertad creativa para hacerlo posible. La versatilidad de los materiales en la impresión 3D permite la experimentación con texturas y acabados. Puedes elegir entre una amplia gama de opciones, desde plásticos duraderos hasta materiales más avanzados, para dar vida a tu mate tridimensional. Además, la posibilidad de imprimir en varios colores te permite personalizar cada detalle, desde el cuerpo principal hasta la bombilla y la base. La impresión 3D también ofrece una oportunidad única para diseñadores y artistas que desean explorar nuevas formas de expresión. Crear mates esculturales, funcionales y visualmente impactantes se convierte en una realidad al alcance de tus manos y tu imaginación. Sumérgete en la revolución de los mates 3D, donde la tradición y la innovación se encuentran para ofrecerte una experiencia única en cada sorbo. Explora nuestra colección de diseños o personaliza el tuyo propio.
+        </div>
+      </div>
+    </main>
+    <section class="F-1">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/4.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="F-2">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/5.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/6.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/7.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/mates/8.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <section id="publicidad">
+        <div class="contenido-publicidad">
+          <h2>Modelando sueños, creando realidades: ¡Tu Mundo en 3D!</h2>
+      <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+        </div>
+      </section>
+      <footer id="footer">
+        <p>PITER 3D</p>
+        <p>&copy;2023</p>
+        <div>
+            <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
+            <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+        </div>
+    </footer>
     
 </body>
 </html>
