--- a/pages/figuras.html
+++ b/pages/figuras.html
@@ -46,6 +46,105 @@
             </div>
           </nav>
     </header>
+    <main class="titular-figura">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title text-center">Arte en cada ángulo: Figuras 3D, donde la imaginación cobra forma</h5>
+        </div>
+        <img src="../imagines/figuras/0.jpg" class="card-img-bottom" alt="...">
+      </div>
+      <div class="card fig">
+        <div class="card-body figura-tex">
+          Bienvenido a la extraordinaria galería de figuras, donde la creatividad y la innovación se fusionan para dar vida a objetos únicos y personalizados. La impresión tridimensional te invita a explorar un mundo donde tus ideas toman forma, llevando la escultura y el diseño a nuevas alturas. Imagina la posibilidad de tener en tus manos una figura que refleje tus gustos personales, pasiones o incluso tu propia imagen. Desde personajes icónicos de películas y videojuegos hasta diseños abstractos y esculturas personalizadas, la impresión tridimensional te permite materializar tus conceptos más creativos con un nivel de detalle sorprendente. La diversidad de materiales disponibles para la impresión amplía aún más las posibilidades. Desde plásticos resistentes hasta resinas translúcidas, puedes elegir el material que mejor se adapte a la estética y funcionalidad de tu figura. La capacidad de imprimir en varios colores agrega una dimensión adicional, permitiéndote capturar cada matiz y detalle con precisión. ¿Te gustaría tener una réplica de tu mascota o sorprender a alguien especial con una figura única como regalo? La impresión tridimensional hace posible la creación de recuerdos tangibles y personalizados que trascienden lo convencional. Además, esta tecnología ofrece una plataforma para diseñadores y artistas para explorar nuevas formas de expresión. Desde piezas de arte contemporáneo hasta esculturas detalladas, la impresión tridimensional abre las puertas a la experimentación y la innovación. Explora nuestra colección de figuras o personaliza la tuya propia. En este espacio donde la imaginación no tiene límites, cada figura se convierte en una obra maestra única. Descubre el arte en tres dimensiones y da vida a tus ideas con la magia de la impresión.¡Bienvenido a la era de la escultura digital!
+        </div>
+      </div>
+    </main>
+    <section class="F-1">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/4.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="F-2">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/5.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/6.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/7.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../imagines/figuras/8.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="publicidad">
+      <div class="contenido-publicidad">
+        <h2>Modelando sueños, creando realidades: ¡Tu Mundo en 3D!</h2>
+    <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+      </div>
+    </section>
+    <footer id="footer">
+      <p>PITER 3D</p>
+      <p>&copy;2023</p>
+      <div>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+      </div>
+  </footer>
     
 </body>
 </html>
