--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -47,11 +48,13 @@
           </nav>
     </header>
     <main id="principal">
+      <div>
+        <h1 class="animate__animated animate__rollIn text-center" >PITER 3D</h1>
+      </div>
         <div class="card mb-3">
             <img src="./imagines/3d-printer-3311587_1280.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h1 class="card-title">DE TU IMAGINACIÓN A LA REALIDAD</h1>
-              <p class="card-text">Piter 3D</p>
+              <h2 class="card-title">DE TU IMAGINACIÓN A LA REALIDAD</h2>
             </div>
           </div>
           <section id="section-contacto">
