--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D</title>
+    <link rel="icon" href="./imagines/PITER 3D.png" type="icon">
+    <meta name="description" content="Explora la revolución de la impresión 3D. Tecnología avanzada, materiales innovadores y creatividad se unen en nuestro sitio para inspirarte. ¡Convierte ideas en realidad hoy mismo">
+    <meta name="keywords" content="impresion, impresion3d,impresoras,filamento,resina,mates3d,funkos,funkospop,imprimir">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Bebas+Neue&family=Lora:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
     <header>
@@ -52,9 +58,9 @@
         <h1 class="animate__animated animate__rollIn text-center" >PITER 3D</h1>
       </div>
         <div class="card mb-3">
-            <img src="./imagines/3d-printer-3311587_1280.png" class="card-img-top" alt="...">
+            <img src="./imagines/3d-printer-3311587_1280.png" class="card-img-tophome" alt="...">
             <div class="card-body">
-              <h2 class="card-title">DE TU IMAGINACIÓN A LA REALIDAD</h2>
+              <h2 class="card-title princi-pal">DE TU IMAGINACIÓN A LA REALIDAD</h2>
             </div>
           </div>
           <section id="section-contacto">
@@ -106,7 +112,7 @@
   </div>
     <section id="publicidad">
       <div class="contenido-publicidad">
-    <h2>Tu Creatividad, nuestro compromiso. ¡Contactanos!</h2>
+    <h2>Contactanos</h2>
     <a href="https://web.whatsapp.com/"target=”_blank”><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
       </div>
     </section>
