--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D|Contacto</title>
+    <link rel="icon" href="../imagines/PITER 3D.png" type="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Bebas+Neue&family=Lora:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../scss/main.css">
 </head>
 <body>
     <header>
@@ -46,10 +50,10 @@
             </div>
           </nav>
     </header>
-    <div class="card text-center">
-      <div class="card-body">
+    <div class="card">
+      <div class="card-body conta-cto text-center">
         <h5 class="card-title">¡Conectate con nosotros!</h5>
-        <p class="card-text">Transformamos preguntas en soluciones, ¡Descúbrelo!</p>
+        <p class="card-text text-center">Transformamos preguntas en soluciones, ¡Descúbrelo!</p>
         <a href="https://web.whatsapp.com/"target=”_blank” class="btn btn-primary">Comunica tus ideas al instante</a>
       </div>
     </div>
@@ -80,7 +84,7 @@
       </div>
     </div>
     <div class="container titulo-formulario text-center">
-      <h2 class="mt-5 mb-4">Empieza el viaje: Llena el formulario y da vida a tus ideas</h2>
+      <h2 class="mt-5 mb-4">¡Llena el formulario y da vida a tus ideas!</h2>
     </div>
   
     <main class="formulario">
