--- a/pages/impresoras.html
+++ b/pages/impresoras.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D|Impresoras</title>
+    <link rel="icon" href="../imagines/PITER 3D.png" type="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Bebas+Neue&family=Lora:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../scss/main.css">
 </head>
 <body>
     <header>
@@ -64,7 +68,7 @@
     </div>
   </section>
   <section class="Impresora-filamento">
-    <div class="card impre-filamento">
+    <div class="card impre-filamento text-center">
       <h2>Impresora 3D de filamento:</h2>
       <div class="card-body impreso-filamento">
         La impresora 3D de filamento se destaca como una herramienta versátil en el mundo de la fabricación aditiva. Este dispositivo utiliza un filamento termoplástico, como PLA o ABS, que se funde y deposita capa por capa para construir objetos tridimensionales. Su proceso de impresión por deposición fundida (FDM) ofrece una asequibilidad y accesibilidad notables, convirtiéndola en una opción popular para entusiastas, diseñadores y pequeñas empresas.La simplicidad de uso de estas impresoras las hace ideales para aquellos que están dando sus primeros pasos en el mundo de la impresión 3D. Además, su capacidad para producir prototipos rápidos, piezas de repuesto y una variedad de objetos funcionales hace que sean una elección versátil en el ámbito doméstico y profesional. La disponibilidad de diversos tipos de filamentos permite una amplia gama de aplicaciones, desde la creación de modelos educativos hasta la fabricación de piezas personalizadas.
@@ -95,7 +99,7 @@
     </div>
   </section>
   <section class="Impresora-resina">
-    <div class="card impre-resina">
+    <div class="card impre-resina text-center">
       <h2>Impresora 3D de resina:</h2>
       <div class="card-body impreso-resina">
         Las impresoras 3D de resina han revolucionado la impresión tridimensional al ofrecer una calidad de detalle excepcional. Estas impresoras utilizan tecnologías como estereolitografía (SLA) para solidificar capas de resina líquida mediante la exposición a la luz ultravioleta. Aunque suelen ser más costosas que las impresoras de filamento, la calidad de los resultados justifica la inversión. La impresión con resina es especialmente adecuada para aplicaciones que requieren una precisión extrema y una superficie suave, como la joyería, la odontología y el prototipado avanzado. La capacidad de estas impresoras para capturar detalles finos y crear objetos con una calidad visual impresionante las convierte en la elección preferida para proyectos que demandan un acabado excepcional. Aunque el proceso puede ser más delicado y requiere cuidado con la manipulación de la resina, los resultados finales hacen que estas impresoras sean una opción invaluable para aquellos que buscan la máxima calidad en sus creaciones tridimensionales.
