--- a/pages/mates.html
+++ b/pages/mates.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D|Mates</title>
+    <link rel="icon" href="../imagines/PITER 3D.png" type="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Bebas+Neue&family=Lora:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../scss/main.css">
 </head>
 <body>
     <header>
@@ -132,7 +136,7 @@
       </div>
       <section id="publicidad">
         <div class="contenido-publicidad">
-          <h2>Modelando sueños, creando realidades: ¡Tu Mundo en 3D!</h2>
+          <h2> Modelando sueños, creando realidades. </h2>
       <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
         </div>
       </section>
