--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D|Contacto</title>
     <link rel="icon" href="../imagines/PITER 3D.png" type="icon">
+    <meta name="description" content="Explora la revolución de la impresión 3D. Tecnología avanzada, materiales innovadores y creatividad se unen en nuestro sitio para inspirarte. ¡Convierte ideas en realidad hoy mismo">
+    <meta name="keywords" content="impresion, impresion3d,impresoras,filamento,resina,mates3d,funkos,funkospop,imprimir">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
