dimos los ultimos detalles, para la entrega final

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piter 3D</title>
-    <link rel="icon" href="./imagines/PITER 3D.png" type="icon">
+    <link rel="icon" href="./imagines/PITER 3D.png" type="3d-icon">
     <meta name="description" content="Explora la revolución de la impresión 3D. Tecnología avanzada, materiales innovadores y creatividad se unen en nuestro sitio para inspirarte. ¡Convierte ideas en realidad hoy mismo">
     <meta name="keywords" content="impresion, impresion3d,impresoras,filamento,resina,mates3d,funkos,funkospop,imprimir">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -70,22 +70,22 @@
             </div>
             <div class="fotos-home">
               <div class="foto"> <!-- Foto 1 -->
-                <img src="./imagines/Home/1.jpg" alt="Imagen 1">
+                <img src="./imagines/Home/1.jpg" alt="computadora-impresora">
               </div>
               <div class="foto"> <!-- Foto 2 -->
-                <img src="./imagines/Home/2.jpg" alt="Imagen 2">
+                <img src="./imagines/Home/2.jpg" alt="Impresora-modelos">
               </div>
               <div class="foto"> <!-- Foto 3 -->
-                <img src="./imagines/Home/3.jpg" alt="Imagen 3">
+                <img src="./imagines/Home/3.jpg" alt="impresora3d">
               </div>
               <div class="foto"> <!-- Foto 4 -->
-                <img src="./imagines/Home/4.jpg" alt="Imagen 4">
+                <img src="./imagines/Home/4.jpg" alt="Impresora-1">
               </div>
               <div class="foto"> <!-- Foto 5 -->
-                <img src="./imagines/Home/5.jpg" alt="Imagen 5">
+                <img src="./imagines/Home/5.jpg" alt="mano3d">
               </div>
               <div class="foto"> <!-- Foto 6 -->
-                <img src="./imagines/Home/6.jpg" alt="Imagen 6">
+                <img src="./imagines/Home/6.jpg" alt="Impresora-2">
               </div>
             </div>
           </section>
@@ -113,15 +113,15 @@
     <section id="publicidad">
       <div class="contenido-publicidad">
     <h2>Contactanos</h2>
-    <a href="https://web.whatsapp.com/"target=”_blank”><img src="./imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+    <a href="https://web.whatsapp.com/"target=”_blank”><img src="./imagines/whatsapp.png" class="img-fluid" alt="whatsapp-icon"></a>
       </div>
     </section>
     <footer id="footer">
       <p>PITER 3D</p>
       <p>&copy;2023</p>
       <div>
-          <a href="https://www.instagram.com/"target=”_blank”><img src="./imagines/instagram.png" alt=""></a>
-          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="./imagines/correo-electronico.png" alt=""></a>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="./imagines/instagram.png" alt="instagram-icon"></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="./imagines/correo-electronico.png" alt="mail-icon"></a>
       </div>
   </footer>
     
