--- a/pages/funkos.html
+++ b/pages/funkos.html
@@ -59,7 +59,7 @@
         <div class="card-body">
           <h5 class="card-title text-center">Cabezas que giran, colecciones que brillan: Descubre nuestro mundo Funko 3D</h5>
         </div>
-        <img src="../imagines/funko/0.jpg" class="card-img-bottom" alt="...">
+        <img src="../imagines/funko/0.jpg" class="card-img-bottom" alt="got">
       </div>
       <div class="card funk">
         <div class="card-body funko-tex">
@@ -71,7 +71,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/1.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/1.jpg" class="card-img-top" alt="monsterinc">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/2.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/2.jpg" class="card-img-top" alt="groot">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/3.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/3.jpg" class="card-img-top" alt="pokemon1">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -95,7 +95,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/4.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/4.jpg" class="card-img-top" alt="pokemon2">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -107,7 +107,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/5.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/5.jpg" class="card-img-top" alt="jugador1">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/6.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/6.jpg" class="card-img-top" alt="mujermaravilla">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -123,7 +123,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/ee.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/ee.jpg" class="card-img-top" alt="guardianes">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -131,7 +131,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/funko/7.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/funko/7.jpg" class="card-img-top" alt="toy-story">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -142,15 +142,15 @@
     <section id="publicidad">
       <div class="contenido-publicidad">
         <h2> Modelando sueños, creando realidades. </h2>
-    <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+    <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="whatsapp-icon"></a>
       </div>
     </section>
     <footer id="footer">
       <p>PITER 3D</p>
       <p>&copy;2023</p>
       <div>
-          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
-          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt="instagram-icon"></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt="mail-icon"></a>
       </div>
   </footer>
 </body>
