--- a/pages/impresion.html
+++ b/pages/impresion.html
@@ -56,7 +56,7 @@
             <div class="card mb-3" style="max-width: 700px; margin: auto;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="../imagines/impresion/titulo.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="../imagines/impresion/titulo.jpg" class="img-fluid rounded-start" alt="impresora-portada">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -75,23 +75,23 @@
     </div>
     <div class="card-group">
       <div class="card">
-        <img src="../imagines/archivo.png" class="card-img-top" alt="...">
+        <img src="../imagines/archivo.png" class="card-img-top" alt="archivo-icon">
         <div class="card-body">
-          <h5 class="card-title">Archivo digital</h5>
+          <h5 class="card-title text-center">Archivo digital</h5>
           <p class="card-text">Para comenzar el proceso se necesita un archivo en formato .STL. La mayoría de los software de diseño 3D permiten la exportación a este formato de archivo con el que podremos trabajar.Si no contás con el archivo podemos diseñarlo nosotros, para pasarte un presupuesto de diseño, necesitamos que nos envíes los planos técnicos de la pieza o fotos con todas las medidas.</p>
         </div>
       </div>
       <div class="card">
-        <img src="../imagines/trabajadores-por-cuenta-propia.png" class="card-img-top" alt="...">
+        <img src="../imagines/trabajadores-por-cuenta-propia.png" class="card-img-top" alt="trabajo-icon">
         <div class="card-body">
-          <h5 class="card-title">Análizis y optimización</h5>
+          <h5 class="card-title text-center">Análizis y optimización</h5>
           <p class="card-text">Cuando nos envías tu diseño, es fundamental que nos des la mayor cantidad posible de información sobre la función de la pieza así podemos entender el tipo de resistencia que requiere.Si es necesario te vamos a sugerir modificaciones de diseño para que tenga más probabilidades de cumplir su función. Te recomendamos el material y los parámetros de impresión alineados con tu objetivo y te enviamos una cotización por mail para que puedas analizarla.</p>
         </div>
       </div>
       <div class="card">
-        <img src="../imagines/impresora-3d.png" class="card-img-top" alt="...">
+        <img src="../imagines/impresora-3d.png" class="card-img-top" alt="impresora-icon">
         <div class="card-body">
-          <h5 class="card-title">Impresión 3D</h5>
+          <h5 class="card-title text-center">Impresión 3D</h5>
           <p class="card-text">Cuando nos confirmas el trabajo, imprimimos tu diseño en el material elegido con la mejor calidad del mercado. Realizamos producción en serie, no dudes en consultarnos por descuentos por cantidades grandes.Tenemos tiempos de entrega express así que unos días después ya podés pasar a retirarlo o coordinamos un envío a cualquier parte del mundo.</p>
         </div>
       </div>
@@ -110,19 +110,19 @@
               <div class="card-body">
                 <p class="card-text">En Piter 3D, nos enorgullece trabajar exclusivamente con materiales de la más alta calidad en cada impresión. Nos aseguramos de que cada filamento utilizado cumpla con estándares rigurosos para garantizar resultados duraderos y precisos en cada proyecto. Tu visión se merece lo mejor, y nosotros nos comprometemos a ofrecer la excelencia en cada detalle.</p>
               </div>
-              <img src="../imagines/cheque.png" class="card-img-top" alt="...">
+              <img src="../imagines/cheque.png" class="card-img-top" alt="tilde-icon">
             </div>
             <div class="card">
               <div class="card-body">
                 <p class="card-text">En el corazón de Piter 3D yace una organización meticulosa que asegura un proceso fluido desde la recepción del archivo hasta la entrega final. Nuestro equipo altamente capacitado coordina cada etapa con precisión, asegurándose de que tu proyecto se maneje con la máxima eficiencia. La organización es clave, y en Piter 3D, la perfección en la ejecución es nuestra promesa.</p>
               </div>
-              <img src="../imagines/cheque.png" class="card-img-top" alt="...">
+              <img src="../imagines/cheque.png" class="card-img-top" alt="tilde-icon">
             </div>
             <div class="card">
               <div class="card-body">
                 <p class="card-text">Valoramos tu tiempo tanto como tú. En Piter 3D, nos comprometemos a cumplir plazos de entrega con puntualidad y precisión. No solo ofrecemos calidad en cada impresión, sino que también garantizamos que recibas tus pedidos en el tiempo y la forma acordados. Tu satisfacción es nuestra prioridad, y cumplir con tus expectativas es la base de nuestro compromiso.</p>
               </div>
-              <img src="../imagines/cheque.png" class="card-img-top" alt="...">
+              <img src="../imagines/cheque.png" class="card-img-top" alt="tilde-icon">
             </div>
           </div>
     </section>
@@ -130,8 +130,8 @@
       <p>PITER 3D</p>
       <p>&copy;2023</p>
       <div>
-          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
-          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt="instagram-icon"></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt="mail-icon"></a>
       </div>
   </footer>
     
