--- a/pages/impresoras.html
+++ b/pages/impresoras.html
@@ -57,7 +57,7 @@
         <div class="card mb-3" style="max-width: 700px; margin: auto;">
             <div class="row g-0">
               <div class="col-md-4 foto-impresora">
-                <img src="../imagines/impresora/laser-3327112_1280.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="../imagines/impresora/laser-3327112_1280.jpg" class="img-fluid rounded-start" alt="portada-impresora">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -79,10 +79,10 @@
     <div id="carouselExampleFade1" class="carousel slide carousel-fade">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../imagines/impresora/impresora filamento1.jpg" class="d-block w-100" alt="...">
+          <img src="../imagines/impresora/impresora filamento1.jpg" class="d-block w-100" alt="filamento-1">
         </div>
         <div class="carousel-item">
-          <img src="../imagines/impresora/impresorafilamento2.jpg" class="d-block w-100" alt="...">
+          <img src="../imagines/impresora/impresorafilamento2.jpg" class="d-block w-100" alt="filamento-2">
         </div>
         <div class="carousel-item">
           <div class="ratio ratio-16x9">
@@ -110,10 +110,10 @@
     <div id="carouselExampleFade2" class="carousel slide carousel-fade">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../imagines/impresora/impresora resina1.jpg" class="d-block w-100" alt="...">
+          <img src="../imagines/impresora/impresora resina1.jpg" class="d-block w-100" alt="resina-1">
         </div>
         <div class="carousel-item">
-          <img src="../imagines/impresora/impresoraresina2.jpg" class="d-block w-100" alt="...">
+          <img src="../imagines/impresora/impresoraresina2.jpg" class="d-block w-100" alt="resina-2">
         </div>
         <div class="carousel-item">
           <div class="ratio ratio-16x9">
@@ -135,8 +135,8 @@
     <p>PITER 3D</p>
     <p>&copy;2023</p>
     <div>
-        <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
-        <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+        <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt="instagram-icon"></a>
+        <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt="mail-icon"></a>
     </div>
 </footer>
  
