--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -135,7 +135,7 @@
             </label>
           </div>
         </div>
-        <div class="col-12">
+        <div class="col-12 text-center">
           <button class="btn btn-primary" type="submit">Enviar</button>
         </div>
       </form>
