--- a/pages/figuras.html
+++ b/pages/figuras.html
@@ -57,7 +57,7 @@
         <div class="card-body">
           <h5 class="card-title text-center">Arte en cada ángulo: Figuras 3D, donde la imaginación cobra forma</h5>
         </div>
-        <img src="../imagines/figuras/0.jpg" class="card-img-bottom" alt="...">
+        <img src="../imagines/figuras/0.jpg" class="card-img-bottom" alt="jocker">
       </div>
       <div class="card fig">
         <div class="card-body figura-tex">
@@ -69,7 +69,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/1.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/1.jpg" class="card-img-top" alt="señor-anillos">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/2.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/2.jpg" class="card-img-top" alt="star-wars">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -85,7 +85,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/3.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/3.jpg" class="card-img-top" alt="naruto">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -93,7 +93,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/4.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/4.jpg" class="card-img-top" alt="ironman">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -105,7 +105,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/5.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/5.jpg" class="card-img-top" alt="darvader">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/6.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/6.jpg" class="card-img-top" alt="mario">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -121,7 +121,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/7.webp" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/7.webp" class="card-img-top" alt="starwars">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -129,7 +129,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/figuras/8.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/figuras/8.jpg" class="card-img-top" alt="star-wars-1">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -140,15 +140,15 @@
     <section id="publicidad">
       <div class="contenido-publicidad">
         <h2> Modelando sueños, creando realidades. </h2>
-    <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+    <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="whatsapp-icon"></a>
       </div>
     </section>
     <footer id="footer">
       <p>PITER 3D</p>
       <p>&copy;2023</p>
       <div>
-          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
-          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+          <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt="instagram-icon"></a>
+          <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt="mail-icon"></a>
       </div>
   </footer>
     
