--- a/pages/mates.html
+++ b/pages/mates.html
@@ -57,7 +57,7 @@
         <div class="card-body">
           <h5 class="card-title text-center">Calidez en cada sorbo: Explora nuestra galería de Mates tridimensionales</h5>
         </div>
-        <img src="../imagines/mates/0.png" class="card-img-bottom" alt="...">
+        <img src="../imagines/mates/0.png" class="card-img-bottom" alt="capitan">
       </div>
       <div class="card mate">
         <div class="card-body mate-tex">
@@ -69,7 +69,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/1.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/1.png" class="card-img-top" alt="freddy">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/2.jpg" class="card-img-top" alt="...">
+            <img src="../imagines/mates/2.jpg" class="card-img-top" alt="equipos">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -85,7 +85,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/3.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/3.png" class="card-img-top" alt="messi">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -93,7 +93,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/4.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/4.png" class="card-img-top" alt="tanos">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -105,7 +105,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/5.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/5.png" class="card-img-top" alt="froozen">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/6.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/6.png" class="card-img-top" alt="figura3d">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -121,7 +121,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/7.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/7.png" class="card-img-top" alt="fryda">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -129,7 +129,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../imagines/mates/8.png" class="card-img-top" alt="...">
+            <img src="../imagines/mates/8.png" class="card-img-top" alt="bender">
             <div class="card-body">
               <p class="card-text text-center"><a href="https://web.whatsapp.com/"target=”_blank”>Más info</a></p>
             </div>
@@ -139,15 +139,15 @@
       <section id="publicidad">
         <div class="contenido-publicidad">
           <h2> Modelando sueños, creando realidades. </h2>
-      <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="..."></a>
+      <a href="https://web.whatsapp.com/"target=”_blank”><img src="../imagines/whatsapp.png" class="img-fluid" alt="whatsapp-icon"></a>
         </div>
       </section>
       <footer id="footer">
         <p>PITER 3D</p>
         <p>&copy;2023</p>
         <div>
-            <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt=""></a>
-            <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt=""></a>
+            <a href="https://www.instagram.com/"target=”_blank”><img src="../imagines/instagram.png" alt="instagram-icon"></a>
+            <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ifkv=AVQVeyyDl43yELTBuhj7my0pomkf_s4heVMk5fPJGXA2DNXKqeRVvbTA5lmAR99drM3U0PYmOCkcUw&rip=1&sacu=1&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S-1861993122%3A1698869009722585&theme=glif"target=”_blank”><img src="../imagines/correo-electronico.png" alt="mail-icon"></a>
         </div>
     </footer>
     
